--- a/app/plugins/yunzhiclub/appointment/updates/version.yaml
+++ b/app/plugins/yunzhiclub/appointment/updates/version.yaml
@@ -15,3 +15,6 @@
 1.0.6:
     - 'Updated table yunzhiclub_appointment_'
     - builder_table_update_yunzhiclub_appointment__4.php
+1.0.7:
+    - 'Updated table yunzhiclub_appointment_'
+    - builder_table_update_yunzhiclub_appointment__5.php
