--- a/app/plugins/yunzhiclub/appointment/updates/version.yaml
+++ b/app/plugins/yunzhiclub/appointment/updates/version.yaml
@@ -18,3 +18,6 @@
 1.0.7:
     - 'Updated table yunzhiclub_appointment_'
     - builder_table_update_yunzhiclub_appointment__5.php
+1.0.8:
+    - 'Updated table yunzhiclub_appointment_'
+    - builder_table_update_yunzhiclub_appointment__6.php
