--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   web:
-    image: aspendigital/octobercms:php7.2-apache
+    image: registry.cn-beijing.aliyuncs.com/mengyunzhi/php:7.2-apache
     ports:
       - 8100:80
     environment:
@@ -16,6 +16,8 @@ services:
 
   mysql:
     image: mysql:5.7
+    volumes:
+      - ./data:/var/lib/mysql
     ports:
       - 3307:3306
     environment:
