提交授课计划并于后台显示，DONE

--- a/app/plugins/yunzhiclub/schedule/plugin.yaml
+++ b/app/plugins/yunzhiclub/schedule/plugin.yaml
@@ -4,3 +4,8 @@ plugin:
     author: yunzhiclub
     icon: oc-icon-adjust
     homepage: ''
+navigation:
+    main-menu-item:
+        label: 课表管理
+        url: yunzhiclub/schedule/schedule
+        icon: icon-bars
