--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,3 +23,6 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=octobercms
+networks:
+  default:
+    driver: bridge
